--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.android.support:design:27.+'
     implementation 'io.reactivex.rxjava2:rxjava:2.+'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.+'
     implementation 'io.reactivex.rxjava2:rxandroid:2.+'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.+'
+
+    implementation 'com.android.support:cardview-v7:27.+'
 }
