--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="ru.vladlin.itodolist.kotlin.android_itodolist_kotlin.ui.login.LoginActivity">
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ru.vladlin.itodolist.kotlin.android_itodolist_kotlin.ui.main.MainActivity"/>
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".ui.task.TaskActivity"
+            android:label="@string/task_name">
+        </activity>
     </application>
 
 </manifest>
