--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.registration.RegistrationActivity"
+            android:label="@string/registration_name">
+        </activity>
+        <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
         </activity>
